public class Axis
{
  public const string HORIZONTAL = "Horizontal";
  public const string VERTICAL = "Vertical";
} // Class

public class CharacterTag
{
  public const string PLAYER = "Player";
  public const string SLIME = "Slime";
  public const string SPIKE_TURTLE = "Spike Turtle";
  public const string SOLBOY = "Solboy";
  public const string SOLGIRL = "Solgirl";
  public const string WARDOG = "Wardog";
} // Class

public class PlayerAnimationTag
{
  public const string RUN = "Run";
  public const string PUNCH = "Punch";
  public const string KICK = "Kick";
  public const string JUMP = "Jump";
  public const string ATTACKED = "Attacked";
  public const string DIE = "Die";
} // Class

public class EnemyAnimationTag
{
  public const string WALK = "Walk";
  public const string ATTACK = "Attack";
  public const string ATTACKED = "Attacked";
  public const string DIE = "Die";
} // Class

public class SceneTag
{
  public const string GAME_SCENE = "Game Scene";
  public const string MAIN_MENU = "Main Menu";
} // Class